Completed the log on 21-02-2026

--- a/daily-logs/21-02-2026.md
+++ b/daily-logs/21-02-2026.md
@@ -50,6 +50,47 @@ In online learning, a parameter known as **learning rate** is defined as how fas
 
 The last way to categorize machine learning learning: 
  - Model-Based learning
- - Instance-based learning
+ - Instance-based learning.
+
+ **Instance-Based**: The algorithm learns the material by heart and then forms similarity measure and then uses this to map where new data would be categorised as.
+
+**Model-Based**: Here, we build a model and it foems the basis for predictions. So you:
+    1. You study the data
+    2. You select the model
+    3. You train the model using the data
+    4. You then apply the model to make predictions based on what it has learnt. This is called *inferencing*
+
+## Main Challenges of Machine Learning
+
+1. Insuffient Quantity of Data
+2. Nonrepresentative Training data 
+- data that does not contain the groups for whom you want to make predictions for.
+- **Sampling noise**: this is when the training data is so small, it introduces unwanted variations and inaccuracies.
+- **Sampling Bias**: Is an error whereby the training data consistently favours a particular group or a certain outcome.
+3. Poor Data Quality
+- Data full of noise, errors and outliers makes it hard for the systems to predict accurate outcomes.
+4. Irrelevant Features
+- **Feature engineering**, the process of ensuring relevant(good set of) features are selected for systems to learn with involves:
+    - **Feature Selection**: Selecting the appropriate features to train the system on
+    - **Feature extraction**: extracting other features from already existing features.
+    - Creating new features from existing features.
+5. Overfitting
+- This is when the system fits the outliers do perfectly as though they were true patterns when in reality they have minimal relation to the other data.
+- This leads to poor generalisation as it performs so well on training data but does not do well with new, unseen data.
+6. Underfitting the Data
+- Happens when the model is too simple to capture the underlying structure of the data. This often leads to errors in both the training data and the validation data.
+
+## Testing and Validation
+- This is done to check how well a model generalises given new cases(data).
+- You can split the data into **training data** and **testing data**.
+- The error from the newly generalised cases is *generalisation error*. If it is high, then your model is overfitting the data.
+
+### Hyperparameter Tuning and Model Selection
+- A *hyperparameter* is an external setting or a constant that is set before training begins and is used to control the learning process. *Hyperparameter Tuning* is the iterative process of selecting pre-controlled parameters that will control the learning process.
+- *Holdout validation*: holding a set of data(*validation set* or *development set*(*dev-set*)) to use in order to help with selecting the correct model.
+
+### Data Mismatch
+- You might have a lot of data but it is not the right data to use for a specific task.
+
 
 
