Added a write-up on the MNISTlike-project

--- a/daily-logs/26-02-2026.md
+++ b/daily-logs/26-02-2026.md
@@ -1,3 +1,19 @@
 # MNIST-like Dataset
 - This is a dataset found in the scikit library, datasets, on digits similar to the MNIST one but highly compressed and low resolution, making it easy for beginners.
-- 
+- The following are the steps I have taken for the MNISTlike project.
+
+1. Import libraries
+    - I used scikit-learn and matplotlib.
+    - For scikit-learn or sklearn, I imported specific functions to use.
+2. Load dataset
+    - Using the datasets library in sklearn, I used the digits dataset
+3. Display the shape
+    - This is getting to see the features and labels present in our dataset.
+    - There were (1797, 64) features and (1797, ) labels
+4. Create, train and predict
+    - Created the model using the MLPClassifier. Why? Because it can model complex relationships in binary labels like what I am working on.
+    - Split the data into testing and training data and train the model using the training subset.
+    -Predict the model's output using the features in the testing subset(X_test)
+5. Evaluate the prediction
+    - Check the accuracy score of the model(divide the predicted labels and the actual labels) to determine the efficiency of the model.
+6. Visualization
